--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 div {
     margin-top: 40px;
-    background-color: rgb(255, 255, 213);
+    background-color: rgba(173, 178, 255, 0.907);
     border-radius: 10px;
     width: auto;
     padding: 10px;
@@ -40,7 +40,7 @@ button:hover {
 }
 
 ol {
-    color: tomato;
+    color: rgb(0, 54, 81);
     font-weight: 700;
 }
 
